# medical_consultation_messaging_system

./: .env.example  .gitignore  ATTRIBUTION.txt  README.md  docker-compose.yml  technical_brief.md  verify_ai.py  verify_escalation_loop.py  verify_full_flow.py  verify_gemini_models.py  verify_logic.py  verify_phase4.py
backend/: check_password.py  debug_profile.py  pyproject.toml  reset_db.py  verify_medical_tuning.py
backend/app/: main.py  schemas.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chat.py  clinician.py  escalations.py
backend/app/core/: privacy.py  security.py
backend/app/db/: database.py  models.py
backend/app/services/: chat.py  llm_factory.py  memory.py  redaction.py  risk.py
backend/tests/: conftest.py  test_access_control.py  test_grounding.py  test_memory_mutation.py  test_redaction.py  test_risk_escalation.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatInterface.tsx  ClinicianDashboard.tsx  Login.tsx  PatientProfileSidebar.tsx
